[gd_scene load_steps=7 format=2]

[ext_resource path="res://core/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/hurt.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/SpecialElite-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/wizard_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/title_background.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[node name="Title" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.0
margin_top = -100.0
margin_right = 350.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_right = 683.0
margin_bottom = 200.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
margin_right = 683.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "LEGEND OF THE BROKEN WAND"

[node name="Label2" type="Label" parent="Menu/VBoxContainer"]
margin_top = 53.0
margin_right = 683.0
margin_bottom = 70.0
text = "A game by thx4nothing for LUDUM DARE 51 Compo"

[node name="StartButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 74.0
margin_right = 683.0
margin_bottom = 97.0
text = "Start Game"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/VBoxContainer"]
margin_top = 101.0
margin_right = 683.0
margin_bottom = 124.0

[node name="Music" type="Label" parent="Menu/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 58.0
margin_bottom = 20.0
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 569.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
value = -20.0

[node name="VolumeTestButton" type="Button" parent="Menu/VBoxContainer/HBoxContainer"]
margin_left = 573.0
margin_right = 683.0
margin_bottom = 23.0
text = "Test Volume"

[node name="QuitButton" type="Button" parent="Menu/VBoxContainer"]
margin_top = 128.0
margin_right = 683.0
margin_bottom = 151.0
text = "Quit"

[node name="TestAudio" type="AudioStreamPlayer" parent="Menu"]
stream = ExtResource( 2 )

[connection signal="pressed" from="Menu/VBoxContainer/StartButton" to="Menu" method="_on_StartButton_pressed"]
[connection signal="drag_ended" from="Menu/VBoxContainer/HBoxContainer/VolumeSlider" to="Menu" method="_on_VolumeSlider_drag_ended"]
[connection signal="pressed" from="Menu/VBoxContainer/HBoxContainer/VolumeTestButton" to="Menu" method="_on_VolumeTestButton_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/QuitButton" to="Menu" method="_on_QuitButton_pressed"]
